<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"/>
    	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/main_tab"
    		android:background="@drawable/bg_footbar"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_home"
    			android:drawableTop="@drawable/ico_zy01"
    			android:id="@+id/radio_button0"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_person"
    			android:drawableTop="@drawable/ico_dp01"
    			android:id="@+id/radio_button1"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_work"
    			android:drawableTop="@drawable/icon_2_c"
    			android:id="@+id/radio_button2"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_search"
    			android:drawableTop="@drawable/icon_3_c"
    			android:id="@+id/radio_button3"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="2.0dip"
    			android:text="@string/main_more"
    			android:drawableTop="@drawable/ico_gd01"
    			android:id="@+id/radio_button4"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    </LinearLayout>
</TabHost>
